syntax = "proto3";

option go_package = "github.com/dislinkt/user-service/proto";

package proto;

import "google/api/annotations.proto";

service UserService{
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/user"
    };
  }
}

message GetAllRequest {
}

message GetAllResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
}
